<resources>
    <string name="app_name">House.co</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="hint_email">Email or username</string>
    <string name="hint_email2">Email</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_fname">First name</string>
    <string name="hint_lname">Last name</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_country">Country</string>

    <string name="btn_login">LOGIN</string>
    <string name="btn_register">SIGN UP</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="btn_link_to_register">"Don't have an account? Sign up."</string>
    <string name="btn_link_to_forgot">"Forgot your login details? Get help signing in."</string>
    <string name="btn_link_to_licenceagreements">"I accept House.co's Term of Service and Privacy Policy"</string>

    <string name="username">"@maulindahn"</string>
    <string name="quantity_hint">1, 2, 3 or more</string>
    <string name="eventdate_hint">mm/dd/yyyy</string>
    <string name="eventlength_hint">1-3 Days</string>
    <string name="address_hint">Please add your address so we can calculate your total price including shipping.</string>
    <string name="photos">Photos</string>
    <string name="description">Description</string>
    <string name="description_hint">Add some details about your items and add some relevant information #hashtags to make it easier for pthers to find it</string>
    <string name="category_hint">Category</string>
    <string name="location_hint">No Location</string>
    <string name="price_hint">$Price</string>
    <string name="delivery">Delivery Options</string>
    <string name="delivery_op1">Meet in person</string>
    <string name="delivery_op2">Local Shipping</string>
    <string name="delivery_op3">International Shipping</string>
    <string name="user_contact">User Information</string>
    <string name="user_information">Add your: Full Name, Full Address, and Phone Number. *Required for return costume address.</string>
    <string name="total_payment">Total</string>
    <string name="item_price">Item Price</string>
    <string name="shipping_price">Shipping Price</string>
    <string name="insurance_price">Insurance</string>
    <string name="payment_total">Total Payment</string>

    <string name="checkout">Checkout</string>
</resources>
