<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff">

    <ImageView
        android:layout_width="375dp"
        android:layout_height="250dp"
        android:src="@drawable/logoblue"
        android:layout_alignParentTop="true"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="200dp" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white"
                    android:hint="@string/hint_email"
                    android:textSize="10dp"
                    android:maxLines="1"
                    android:inputType="textEmailAddress"
                    android:padding="15dp"
                    android:textColor="@color/input"
                    android:textColorHint="@color/input_hint"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white"
                    android:hint="@string/hint_password"
                    android:textSize="10dp"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:textColor="@color/input"
                    android:textColorHint="@color/input_hint" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <!-- Login Button -->
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/btn_bg"
                android:text="@string/btn_login"
                android:textStyle="bold"
                android:textColor="@color/btn_text"/>

            <!-- Link to Forgot Screen -->
            <Button
                android:id="@+id/btnLinkToForgotLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/btn_link_to_forgot"
                android:textAllCaps="false"
                android:textColor="@color/blue"
                android:textSize="10dp" />
        </LinearLayout>

    </LinearLayout>

    <!-- Link to Register Screen -->
    <Button
        android:id="@+id/btnLinkToRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:layout_alignParentBottom="true"
        android:text="@string/btn_link_to_register"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textSize="10dp" />
</RelativeLayout>