<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white">

    <!-- Link to Terms of Service and Privacy Policy -->
    <Button
        android:id="@+id/btnLinkToLicenseAgreement"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:background="@null"
        android:layout_alignParentBottom="true"
        android:text="@string/btn_link_to_licenceagreements"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textSize="10dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="225dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/firstname"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="5dp"
                        android:hint="@string/hint_fname"
                        android:textSize="10dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:maxLines="1"
                        android:inputType="textCapWords"
                        android:textColor="@color/input"
                        android:textColorHint="@color/input_hint" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/lastname"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:hint="@string/hint_lname"
                        android:textSize="10dp"
                        android:padding="10dp"
                        android:maxLines="1"
                        android:inputType="textCapWords"
                        android:textColor="@color/input"
                        android:textColorHint="@color/input_hint" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/add_pp"
                android:src="@drawable/ic_add_a_photo_black_48dp"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_margin="30dp" />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:hint="@string/hint_email2"
                android:textSize="10dp"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:maxLines="1"
                android:textColor="@color/input"
                android:textColorHint="@color/input_hint" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:hint="@string/hint_username"
                android:textSize="10dp"
                android:inputType="text"
                android:padding="10dp"
                android:maxLines="1"
                android:textColor="@color/input"
                android:textColorHint="@color/input_hint" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:hint="@string/hint_password"
                android:textSize="10dp"
                android:inputType="textPassword"
                android:padding="10dp"
                android:maxLines="1"
                android:textColor="@color/input"
                android:textColorHint="@color/input_hint" />
        </android.support.design.widget.TextInputLayout>


        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gender"
            android:layout_weight="1"
            android:layout_margin="5dp"/>


        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/country"
            android:layout_weight="1"
            android:layout_margin="5dp"/>


        <!-- Login Button -->
        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnRegister"
            android:layout_marginTop="20dip"
            android:background="@color/blue"
            android:text="@string/btn_register"
            android:textColor="@color/white"
            android:textStyle="bold"/>

    </LinearLayout>
</RelativeLayout>