<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkout"
            android:textColor="@color/input"
            android:textSize="17dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_shopping_cart_black_18dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Quantity      :"
            android:textSize="15dp"
            android:textColor="@color/blue"
            android:layout_gravity="center"/>

        <EditText
            android:layout_gravity="center"
            android:paddingTop="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/quantity_hint"
            android:textSize="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_accessibility_black_18dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Size              :"
            android:textSize="15dp"
            android:textColor="@color/blue"
            android:layout_gravity="center"/>

        <Spinner
            android:id="@+id/size"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/quantity_hint"
            android:textSize="15dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_event_black_18dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Event Date  :"
            android:textSize="15dp"
            android:textColor="@color/blue"
            android:layout_gravity="center"/>

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/eventdate_hint"
            android:inputType="datetime"
            android:textSize="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_date_range_black_18dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Event Length:"
            android:textSize="15dp"
            android:textColor="@color/blue"
            android:layout_gravity="center"/>

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/eventlength_hint"
            android:paddingTop="12dp"
            android:textSize="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery"
            android:textSize="17dp"
            android:textColor="@color/input"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_person_black_18dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:text="Meet in person"
            android:textSize="15dp"/>

        <TextView
            android:layout_marginLeft="138dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Not Available"
            android:textSize="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_local_shipping_black_18dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:text="@string/delivery_op2"
            android:textSize="15dp"/>

        <TextView
            android:layout_marginLeft="180dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="with"
            android:textSize="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_location_on_black_18dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Address"
            android:textSize="15dp"
            android:textColor="@color/blue"
            android:layout_gravity="center"/>

        <EditText
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_hint"
            android:textSize="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_payment"
            android:textSize="17dp"
            android:textColor="@color/input"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:text="@string/item_price"
            android:layout_marginLeft="15dp"
            android:textSize="15dp"/>

        <TextView
            android:layout_marginLeft="165dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rp. 350.000"
            android:textSize="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:text="@string/shipping_price"
            android:layout_marginLeft="15dp"
            android:textSize="15dp"/>

        <TextView
            android:layout_marginLeft="150dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rp.8.000"
            android:textSize="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insurance_price"
            android:textSize="15dp"
            android:layout_marginLeft="15dp"
            android:textColor="@color/blue"
            android:layout_gravity="center"/>

        <TextView
            android:layout_marginLeft="175dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rp.10.000"
            android:textSize="10dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_total"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"
            android:textSize="15dp"
            android:textColor="@color/blue"
            android:layout_gravity="center"/>

        <TextView
            android:layout_marginLeft="165dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rp.368.000"
            android:textStyle="bold"
            android:textSize="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp">
        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="PAY WITH DEBIT OR CREDIT CARD"
            android:background="@color/blue"
            android:textColor="@color/white"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginTop="10dp">
        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="RENTAL AGREEMENT"
            android:background="@color/white"
            android:textColor="@color/blue"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>
</ScrollView>